# hackaton-mental-health-be

./: .dockerignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: hackaton-mental-health-AutoDeployTrigger-7b33d9bc-31e4-4d64-a5f1-3690050a790d.yml  hackaton-mental-health-AutoDeployTrigger-a4b9da34-f219-451f-a70b-96f75fad2a39.yml  main_Mindiri.yml  main_mindiri.yml
app/: main.py
app/api/: dependencies.py
app/api/routes/: assessment.py  chat.py
app/config/: settings.py
app/core/: constants.py  exceptions.py
app/models/: assessment.py  chat.py
app/services/: assessment_service.py  azure_openai_service.py  chat_service.py
app/utils/: logging.py
